# FAIRy

./: .gitignore  .project_config.json  .zenodo.json  README.md  cookiecutter.json  motivation.md  plan.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: data_checks.yml  zenodo_release.yml
data/: README.md
docs/: README.md  metadata_schema.md  naming_conventions.md
docs/data_dictionaries/: README.md
hooks/: post_gen_project.py
src/: main.py
src/checks/: check_naming_convention.py  generate_data_dictionary.py  quality_check.py
src/utils/: csv_to_ge_suite.py  generate_zenodo_json.py  regex_builder.py
tests/: test_csv_to_ge_suite.py  test_generate_data_dictionary.py  test_generate_zenodo_json.py  test_quality_check.py  test_regex_builder.py
{{cookiecutter.project_slug}}/: .project_config.json
