[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-horizon-europe-data-project"
version = "0.1.0"
description = "A FAIR-compliant research data management project."
authors = [
  { name="Your Name", email="your@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
