[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FAIRy"
version = "0.1.0"
description = "A FAIR-compliant research data management project."
authors = [
  { name="Martin Schätz", email="martin@schaetz.cz" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "great_expectations",
  "pandas",
]

[project.scripts]
fairy = "main:main"

[tool.setuptools.packages.find]
where = ["src"]
